fix overlap

--- a/assets/_units.scss
+++ b/assets/_units.scss
@@ -8,7 +8,7 @@
         position: relative;
 
         &:first-child {
-            margin-right: 0;
+            margin-right: -1px;
         }
 
         &:last-child {
